feat(governanca-juridico-licenciamento): implementa fluxo completo de compliance, validação jurídica e licenciamento auditável